main.tf
provider "aws" {
  region = "ap-south-1"   # Mumbai region
}

# ------------------ KEY PAIR ------------------

resource "aws_key_pair" "deployer" {
  key_name   = "newss"
  public_key = file("${path.module}/id_rsa.pub")
}

# ------------------ SECURITY GROUP ------------------

resource "aws_security_group" "allow_ports" {
  name        = "allow_ssh_http_newss"
  description = "Allow SSH, HTTP, and Jenkins"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Ananth-SG"
  }
}

# ------------------ EC2 INSTANCE ------------------

resource "aws_instance" "ubuntu" {
  ami           = "ami-0f5ee92e2d63afc18"  # Ubuntu 22.04 Mumbai
  instance_type = "t3.micro"

  key_name        = aws_key_pair.deployer.key_name
  vpc_security_group_ids = [aws_security_group.allow_ports.id]

  tags = {
    Name = "Ananth-EC2"
  }
}

# ------------------ OUTPUTS ------------------

output "instance_public_ip" {
  value = aws_instance.ubuntu.public_ip
}

output "instance_id" {
  value = aws_instance.ubuntu.id
}
